# agent-evals

./: .gitignore  agent-evals-spec.md  pyproject.toml
cases/: pi.eval_cases.jsonl  sample.eval_cases.jsonl
cases/fixtures/: pi_session_sample.jsonl
cases/pi_targets/mini_py/: README.md  string_tools.py
cases/pi_targets/mini_py/tests/: test_string_tools.py
cases/pi_targets/word_counter/: README.md  counter.py
cases/pi_targets/word_counter/tests/: test_counter.py
configs/: gates.yaml  judge_rubric.yaml  weights.yaml
docs/: pi_session_inventory.md
scripts/: inspect_pi_session.py
src/agent_evals/: __init__.py  cli.py  datasets.py
src/agent_evals/adapters/: __init__.py  base.py  mock.py  pi.py
src/agent_evals/comparisons/: __init__.py  compare.py
src/agent_evals/parsers/: __init__.py  pi_session.py
src/agent_evals/reports/: files.py
src/agent_evals/runners/: __init__.py  pipeline.py
src/agent_evals/scorers/: __init__.py  aggregate.py  answer_rules.py  base.py  execution_metrics.py  judge.py  pi_outcome.py  tool_trajectory.py
src/agent_evals/traces/: __init__.py  schema.py
tests/: test_aggregate_scorer.py  test_answer_rules_scorer.py  test_cli.py  test_compare.py  test_datasets.py  test_execution_metrics_scorer.py  test_judge_scorer.py  test_pi_adapter.py  test_pi_outcome_scorers.py  test_pi_session_parser.py  test_run_pipeline.py  test_tool_trajectory_scorer.py
