[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-evals"
version = "0.1.0"
description = "Local-first agent evaluation utilities."
readme = "agent-evals-spec.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8,<3",
  "jsonschema>=4,<5",
  "pyyaml>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
agent-evals = "agent_evals.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
